@@ -161,7 +161,7 @@ class FTPServer(Acceptor):
             return self._map_len() <= self.max_cons
 
     def _log_start(self):
-        if not logging.getLogger().handlers:
+        if not logging.getLogger('pyftpdlib').handlers:
             # If we get to this point it means the user hasn't
             # configured logger. We want to log by default so
             # we configure logging ourselves so that it will
